RESOLVED FIXED240352
REGRESSION (250413@main): [ iOS ] system-preview/badge.html is a consistent image failure
https://bugs.webkit.org/show_bug.cgi?id=240352
Summary REGRESSION (250413@main): [ iOS ] system-preview/badge.html is a consistent i...
Karl Rackler
Reported 2022-05-12 11:39:10 PDT
Description: system-preview/badge.html The first failure that I saw on the dashboard was 5/9/2022 at r293975, and looking at the dashboard, the commit that caused the issue is possibly r293975. REPRODUCTION STEPS I can reproduce this on r293985, but am unable to reproduce it on r293958 or earlier. That is the closest I can get due to the lack of commits in that range, so I cannot pinpoint with repro what change could have caused this. Command: run-webkit-tests --root 293985 --ios-simulator --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --no-retry system-preview/badge.html Result: Regressions: Unexpected image-only failures (1) system-preview/badge.html [ ImageOnlyFailure ] History: https://results.webkit.org/?suite=layout-tests&test=system-preview%2Fbadge.html&platform=ios&limit=50000 Image Diff: https://build.webkit.org/results/Apple-iOS-15-Simulator-Debug-WK2-Tests/250483%40main%20(2532)/system-preview/badge-diffs.html
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-12 11:39:32 PDT
Ryan Haddad
Comment 2 2022-05-12 14:50:41 PDT
Indeed, https://commits.webkit.org/250413@main is clearly implicated based on result history.
Robert Jenner
Comment 3 2022-05-17 13:18:36 PDT
EWS
Comment 4 2022-05-17 13:23:21 PDT
Test gardening commit r294339 (250656@main): <https://commits.webkit.org/250656@main> Reviewed commits have been landed. Closing PR #686 and removing active labels.
Robert Jenner
Comment 5 2022-05-17 13:29:59 PDT
I have added [ ImageOnlyFailure ] as an expectation for this test while it is being reviewed, and resolved.
Antoine Quint
Comment 6 2022-05-23 10:52:36 PDT
EWS
Comment 7 2022-05-23 22:14:24 PDT
Committed r294729 (250907@main): <https://commits.webkit.org/250907@main> Reviewed commits have been landed. Closing PR #929 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.