REGRESSION (250413@main): [ iOS ] system-preview/badge.html is a consistent image failure https://bugs.webkit.org/show_bug.cgi?id=240352 rdar://93191053

Patch by Antoine Quint <graouts@apple.com> on 2022-05-23
Reviewed by Simon Fraser.

In the case of an ARKit image, we should only be returning when we don't
have a native image to record, otherwise the system image itself needs
to be recorded as well.

* LayoutTests/platform/ios-wk2/TestExpectations:
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::drawSystemImage):

Canonical link: https://commits.webkit.org/250907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294729 268f45cc-cd09-0410-ab3c-d52691b4dbfc